# ai-c

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  UI_IMPROVEMENTS_FINAL.md  UI_IMPROVEMENTS_SUMMARY.md  UI_INTEGRATION_COMPLETE.md  USAGE.md  clippy.toml  debug_layout.md  layout_analysis.md  layout_fix_plan.md  rustfmt.toml
.github/workflows/: ci.yml
docs/: AI-Commit_Agent_System_Architecture.md  Agent_System_Workflows.md  Agent架构技术设计文档.md  Code_Review_and_Improvements.md  MCP协议集成技术设计文档.md  Rust代码架构布局文档.md  Rust代码流程文档.md  Rust依赖包列表文档.md  Rust开发需求文档.md  Rust项目文件布局文档.md  tui-demo.html  功能列表.md  单元测试文档.md  开发任务列表.md  核心接口和数据结构定义文档.md
examples/: test_branch_switching.rs
src/: error.rs  lib.rs  lib_simple.rs  main.rs  main_simple.rs
src/ai/: agent.rs  client.rs  collaboration.rs  config_manager.rs  health.rs  hot_swap.rs  load_balancer.rs  manager.rs  message_bus.rs  metrics_collector.rs  mod.rs  prompt_manager.rs  recovery.rs  scheduler.rs  suggestion_cache.rs  timeout_retry.rs
src/ai/agents/: code_analysis_agent.rs  commit_agent.rs  mod.rs
src/ai/mcp/: client.rs  errors.rs  mod.rs  protocol.rs  resources.rs  server.rs  tools.rs  transport.rs
src/app/: events.rs  mod.rs  state.rs
src/config/: mod.rs
src/git/: cache.rs  mod.rs  operations.rs  service.rs  service_backup.rs  workflow.rs
src/ui/: diff.rs  keyboard.rs  layout.rs  mod.rs  selection.rs  theme.rs
src/ui/components/: agent_manager.rs  agent_panel.rs  ai_suggestions.rs  commit_history.rs  context_manager.rs  context_menu.rs  diff_viewer.rs  filter.rs  git_operations.rs  global_search.rs  help.rs  mod.rs  search.rs  search_cache.rs  search_index.rs  shortcuts.rs  sidebar.rs  status_bar.rs  tabs.rs
src/ui/components/modals/: confirmation.rs  input.rs  mod.rs  progress.rs
src/ui/components/tabs/: branches.rs  gitflow.rs  mod.rs  remotes.rs  stash.rs  status.rs  tags.rs
src/ui/diff/: inline_editor.rs  utils.rs
tests/: ai_client_tests.rs  basic_tests.rs  commit_agent_tests.rs  core_test.rs  git_tests.rs  integration_tests.rs  minimal_test.rs  prompt_manager_tests.rs  selection_test.rs
